--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- HEADER -->
 <header>
     <div class="navGauche">
-        <a href="#" aria-label="Logo"><img src="./Assets/images/logo.png" alt="Logo"></a>
+        <a href="#" aria-label="Logo"><img src="./Assets/images/logo.png" alt="Logo"> aria-label = "logo"</a>
         <p>Lorem ipsum dolor <span> sit amet </span></p>
     </div>
     <div class="navDroite">
@@ -30,7 +30,9 @@
 <body>
     <section class="main">
         <section >
-            <img src="./Assets/images/header-page-catalogue.png" alt="visuel de deux boxeurs" id="mainPhoto">
+            <div class="imageProduit">
+              <img src="./Assets/images/header-page-catalogue.png" alt="visuel de deux boxeurs" id="mainPhoto">
+            </div>
         </section>
         <section class="mainProduits">
             <div class="Produit">
@@ -91,12 +93,12 @@
                 <a href="#">CGV</a>
         </nav>
         <section class="gallerieServices">
-            <div class="service">
-                <a href="#"> <img src="./Assets/images/icon-livre.png" alt="Lien vers un service"></a>
+            <div class="service ">
+                <a href="#"> <img src="./Assets/images/icon-livre.png" alt="Lien vers un service de livraison"></a>
                 <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, velit</h2>
             </div>
             <div class="service">
-                <a href="#"> <img src="./Assets/images/icon-camion.png" alt="lien vers un service"> </a>
+                <a href="#"> <img src="./Assets/images/icon-camion.png" alt="lien vers un autre service "> </a>
                 <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, velit</h2>
             </div>
             <div class="service">
